--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5177,6 +5177,22 @@
   langid = {english}
 }
 
+@article{tibbittsHumidityPlants1979,
+  title = {Humidity and {{Plants}}},
+  author = {Tibbitts, Theodore W.},
+  date = {1979},
+  journaltitle = {BioScience},
+  volume = {29},
+  pages = {358--363},
+  publisher = {{[American Institute of Biological Sciences, Oxford University Press]}},
+  issn = {0006-3568},
+  doi = {10.2307/1307692},
+  abstract = {Humidity levels control directly the rate of transpirational water loss and stomatal aperture of plants. Thus, humidity regulates photosynthetic rates, tissue temperatures, plant water potentials, and concentrations of Ca in certain tissues. Humidity also controls water taken in by tissues through condensation and direct vapor uptake.},
+  eprint = {1307692},
+  eprinttype = {jstor},
+  number = {6}
+}
+
 @online{TRYPlantTrait,
   title = {{{TRY}} Plant Trait Database – Enhanced Coverage and Open Access - {{Kattge}} - 2020 - {{Global Change Biology}} - {{Wiley Online Library}}},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14904},
@@ -5837,6 +5853,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IIXEWQUU\\LeafAge, Zhang et al. 2012.pdf},
   langid = {english},
   number = {5}
+}
+
+@article{zohnerOngoingSeasonallyUneven2019,
+  title = {Ongoing Seasonally Uneven Climate Warming Leads to Earlier Autumn Growth Cessation in Deciduous Trees},
+  author = {Zohner, Constantin M. and Renner, Susanne S.},
+  date = {2019-02-01},
+  journaltitle = {Oecologia},
+  volume = {189},
+  pages = {549--561},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-019-04339-7},
+  url = {https://doi.org/10.1007/s00442-019-04339-7},
+  urldate = {2021-01-18},
+  abstract = {Ongoing global warming is causing phenological shifts that affect photosynthesis and growth rates in temperate woody species. However, the effects of seasonally uneven climate warming—as is occurring in much of Europe, where the winter/spring months are warming twice as fast than the summer/autumn months—on autumn growth cessation (completion of overwintering buds) and leaf senescence, and possible carry-over effects between phenophases, remain under-investigated. We conducted experiments in which we exposed saplings of canopy and understory species to 4~°C warming in winter/spring, summer/autumn, or all year to disentangle how the timing of bud break, bud set completion, and leaf senescence is affected by seasonally uneven warming. All-year warming led to significantly delayed leaf senescence, but advanced bud set completion; summer/autumn warming only delayed leaf senescence; and winter/spring warming advanced both bud set and senescence. The non-parallel effects of warming on bud completion and leaf senescence show that leaf senescence alone is an inadequate proxy for autumn growth cessation in trees and counterintuitively suggest that continued uneven seasonal warming will advance cessation of primary growth in autumn, even when leaf senescence is delayed. Phenological responses to warming treatments (earlier spring onset, later autumn senescence) were more than twice as high in understory species than in canopy species, which can partly be explained by the absence of carry-over effects among phenophases in the former group. This underscores the need to consider differences among plant functional types when forecasting the future behaviour of ecosystems.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\K363X7KT\\Zohner and Renner - 2019 - Ongoing seasonally uneven climate warming leads to.pdf},
+  langid = {english},
+  number = {2}
 }
 
 @misc{zotero-955,
